# gpt-2

./: .gitignore  README.md  gpt.ipynb  main.py  pyproject.toml
configs/: model_configs.py  training_configs.py
data/: dataset.py
src/inference/: generate.py
src/model/: __init__.py  gpt.py  layer.py  transformer.py
src/training/: trainer.py
src/utils/: checkpoint.py  logging.py
